# calc_repo_lines

./: README.md  calc_repo_lines.py  pyproject.toml  requirements.txt  test_calc_lines.py
data/: results.txt
