[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calc_repo_lines"
version = "0.1.0"
description = "Simple script to count all lines in a GitHub repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "tqdm>=4.67.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]